--- a/quiz-preparation/output.html
+++ b/quiz-preparation/output.html
@@ -1,47 +1,9 @@
-<header class="site-header">
-    <div class="header-container">
-        <!-- Logo / Site Name -->
-        <a href="/" class="site-logo" aria-label="Your Website Name - Home">
-            <!-- Use an image for your logo -->
-            <img src="https://via.placeholder.com/150x50?text=Your+Logo" alt="Your Website Name Logo">
-            <!-- OR, if you prefer text, use a span and style it -->
-            <!-- <span class="logo-text">Your Site</span> -->
-        </a>
-
-        <!-- Mobile Menu Toggle Button (hidden by default on desktop, shown on mobile) -->
-        <button class="menu-toggle" aria-label="Open navigation menu" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-
-        <!-- Primary Navigation -->
-        <nav class="main-nav" aria-label="Main Navigation">
-            <ul class="nav-list">
-                <li><a href="/" class="nav-link current-page">Home</a></li>
-                <li><a href="/about" class="nav-link">About Us</a></li>
-                <li><a href="/services" class="nav-link">Services</a></li>
-                <li><a href="/blog" class="nav-link">Blog</a></li>
-                <li><a href="/contact" class="nav-link">Contact</a></li>
-                <!-- Example of a dropdown menu (requires CSS/JS) -->
-                <li class="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" aria-haspopup="true" aria-expanded="false">More <span class="arrow-down">&#9660;</span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/portfolio">Portfolio</a></li>
-                        <li><a href="/team">Our Team</a></li>
-                        <li><a href="/faq">FAQ</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-
-        <!-- Header Actions (e.g., CTA Button, Login Link, Search Icon) -->
-        <div class="header-actions">
-            <a href="/signup" class="btn btn-primary">Sign Up Free</a>
-            <!-- Optional: Login link -->
-            <!-- <a href="/login" class="login-link">Login</a> -->
-            <!-- Optional: Search button/icon -->
-            <!-- <button class="search-toggle" aria-label="Open search"><i class="fas fa-search"></i></button> -->
-        </div>
-    </div>
-</header>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Screenshot</title>
+</head>
+<body>
+  <p>create in screenshort</p>
+</body>
+</html>
